--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,6 @@
   text-align: center;
 }
 
-.score {
-  font-size: 4rem;
-  margin: 0;
-  color: aquamarine;
-  font-weight: bold;
-  position: absolute;
-  top: 9rem;
-  left: 6rem;
-}
-
 .title {
   margin: 0;
   color: aquamarine;
@@ -20,5 +10,6 @@
   left: 3rem;
   top: 2rem;
   font-size: 2rem;
-  width: 10rem;
+  width: 11rem;
+  text-align: left;
 }
