--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,26 @@
   width: 11rem;
   text-align: left;
 }
+
+.result {
+  position: absolute;
+  width: 22rem;
+  color: white;
+  font-size: 4rem;
+  font-weight: bold;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+}
+
+button {
+  width: 10rem;
+  height: 4rem;
+  font-size: 2.5rem;
+  font-weight: bold;
+  background: bisque;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
